fix geometry handling